<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.oilsinventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Layout capturing and setting the product image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/add_image"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:onClick="selectPicture"
                    android:text="@string/select_picture" />

                <Button
                    android:id="@+id/take_image"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:onClick="takePicture"
                    android:text="@string/take_picture" />
            </LinearLayout>

            <ImageView
                android:id="@+id/oil_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/no_image_available" />
        </LinearLayout>

        <!-- Layout naming the oil -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- Label for name of oil-->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_oil_name" />

            <!-- Input field for name of oil -->
            <EditText
                android:id="@+id/edit_oil_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_oil_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <!-- Size of the oil bottle -->
        <LinearLayout
            android:id="@+id/container_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- Size label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/size_bottle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Size oil bottle drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_size"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Price per bottle -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- Price label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Time field -->
                <EditText
                    android:id="@+id/edit_oil_price"
                    style="@style/EditorFieldStyle"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/hint_price_bottle"
                    android:inputType="numberDecimal" />

                <!-- Units for time (minutes) -->
                <TextView
                    android:id="@+id/label_oil_price"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_bottle_price" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Layout for entering quantity -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Layout for initial oil quantity.  Visible for adding new oil -->
            <LinearLayout
                android:id="@+id/initial_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <!-- Label for name of oil-->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/label_quantity" />

                <!-- Input field for name of oil -->
                <EditText
                    android:id="@+id/enter_initial_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/hint_initial_quantity"
                    android:inputType="number" />
            </LinearLayout>

            <!-- Layout for modifying oil quantity.  Visible for editing an oil -->
            <LinearLayout
                android:id="@+id/update_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:text="@string/label_in_stock" />

                    <TextView
                        android:id="@+id/oil_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/initial_quantity_value"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/label_sold" />

                    <EditText
                        android:id="@+id/edit_quantity_sold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/hint_oil_quantity"
                        android:inputType="number" />
                </LinearLayout>

                <Button
                    android:id="@+id/update_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:layout_weight="0"
                    android:onClick="updateQty"
                    android:text="@string/update_oil" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CategoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/label_received" />

                    <EditText
                        android:id="@+id/edit_quantity_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/hint_oil_quantity"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:onClick="orderOils"
                android:text="@string/place_order" />

    </LinearLayout>
</ScrollView>
